# libOpenWinControls

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  annotated_dup.js  dir_2218ba66a92b838143c37ed6e66abdd9.html  dir_41ef5d8a90b9cc03a02949a5c062e6f0.html  dir_41ef5d8a90b9cc03a02949a5c062e6f0.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_f89abcb304c928c7d889aa5625570de5.html  doxygen_crawl.html  functions.html  functions_func.html  hierarchy.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js
d0/d01/: Button_8h.js  Button_8h_source.html
d3/d02/: BackButtonMacroType_8h_source.html
d3/d07/: RumbleMode_8h.html  RumbleMode_8h.js  RumbleMode_8h_source.html  classOWC_1_1Controller.js
d4/d00/: classOWC_1_1ControllerV2.html  classOWC_1_1ControllerV2.js
d4/d06/: EmulationMode_8h.html  EmulationMode_8h_source.html
d6/d00/: XinputUsageIDMap_8h.html  XinputUsageIDMap_8h_source.html
d7/d00/: classOWC_1_1ControllerV1.html  classOWC_1_1ControllerV1.js
d8/d07/: LedMode_8h_source.html
d9/d06/: classOWC_1_1Controller-members.html
da/d05/: ControllerV2_8h_source.html
db/d05/: export_8h_source.html
dc/d01/: ControllerFeature_8h.html  ControllerFeature_8h.js  (+3 more)
docs/: protocolV1.md  protocolV2.md
search/: all_0.js  all_1.js  all_2.js  all_4.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_0.js  enums_0.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_1.js  functions_0.js  functions_1.js  functions_5.js  functions_6.js  pages_0.js  pages_3.js  pages_4.js  variables_1.js
src/: Utils.cpp  Utils.h
(+94 files in other folders)
